Replace information on website with relevant information

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
 	<title>HCI Project Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/introHCI.css" type="text/css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<!-- this is a comment in HTML -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,8 +21,8 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Veronica Lin</h1>
+			<p>computer science</p>
 		</div>
 
 
@@ -29,22 +31,26 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+			<a href="https://velin13.github.io/veronicaWebsite/">
+				<img width="600" height="300" src="images/pw.png" alt="Snapshot of Personal Website">
+				<p>Personal Website</p>
 			</a>
+			<h5>Personal website containing more information and projects done by Veronica</h5>
 		</div>
 		<div id="project2">
-			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-				<p>Needfinding</p>
+			<a href="https://meat-space.org/">
+				<img width="600" height="350" src="images/meatspace.png" alt="MeatSpace">
+				<p>MeatSpace: Web Components Library</p>
+
 			</a>
+			<h5>Web Components Library built by a team of developers</h5>
 		</div>
 		<div id="project3">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-				<p>Prototyping</p>
+			<a href="travel.html">
+				<img width="800" height="200" src="images/travel.JPG" alt="Travel">
+				<p>Traveling</p>
 			</a>
+			<h5>Photograph of Big Sur</h5>
 		</div>
 		<div id="project4">
 			<a href="project.html">
